# cmake-sample-learning

./: .gitignore  CMakeLists.txt
common/: extern-c-def.h  new-line-def.h
my-dyn-exe/: CMakeLists.txt
my-dyn-exe/src/: LibLoader.linux.cpp  LibLoader.windows.cpp  lib-loader-api.h  main.cpp
my-exe/: CMakeLists.txt
my-exe/src/: main.cpp
my-lib/: 000-cmake-cmd.cmd  CMakeLists.txt
my-lib/public/: func.c.h  func.cpp.h  my-lib-api.h
my-lib/src/: func.c  func.cpp
